testsuite/tests/grammar/invalid_lexers/pattern_9.lkt
lexer foo_lexer {
    val pat = 1
}
